# smartcardpp

./: CMakeLists.txt  CardBase.cpp  CardBase.h  ManagerInterface.h  NEWS  PCSCManager.cpp  PCSCManager.h  SCError.cpp  build.bat  build64.bat  locked_allocator.h  smartcardpp.h  test.cpp
esteid/: EstEidCard.cpp  EstEidCard.h
